# giggle

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  basic_features.rs  beat_tracking.rs  chroma_features.rs  dtw_alignment.rs  harmonic_analysis.rs  hpss.rs  mfcc_extraction.rs  music_sync.rs  music_synthesis.rs  onset_detection.rs  pitch_tracking.rs  spectral_analysis.rs  spectral_contrast.rs  superflux_onset.rs  time_pitch_effects.rs  trim_split.rs  viterbi_decoding.rs  vocal_separation.rs
src/: beat.rs  cqt.rs  display.rs  error.rs  fft.rs  files.rs  filters.rs  frame.rs  harmonic.rs  io.rs  lib.rs  pitch.rs  spectrum.rs  window.rs
src/convert/: frequency.rs  intervals.rs  mod.rs  music_theory.rs  pitch.rs  scales.rs  tests.rs  timing.rs  weighting.rs
src/effects/: hpss.rs  mod.rs  phase_vocoder.rs  preemphasis.rs  remix.rs  time_pitch.rs  trim.rs
src/feature/: basic.rs  chroma.rs  contrast.rs  mel.rs  mfcc.rs  mod.rs  tempo.rs
src/onset/: detect.rs  mod.rs  strength.rs
src/utils/: array.rs  complex.rs  dtw.rs  filtering.rs  framing.rs  hmm.rs  masking.rs  matching.rs  matrix.rs  mod.rs  numerical.rs  rqa.rs  segmentation.rs  similarity.rs  tests.rs  validation.rs
tests/: align_librosa.rs  api_behavior.rs  basic.rs  basic_features.rs  beat.rs  contrast.rs  convert.rs  cqt.rs  edge_cases.rs  effects.rs  feature.rs  onset.rs  pitch.rs  props.proptest-regressions  props.rs  report.rs  tempo.rs  trim_split.rs  validate_impl.rs
tests/data/: .gitignore  README.md  generate_fixtures.py
