[package]
name = "giggle"
version = "0.1.0"
edition = "2024"
description = "Audio and Music Analysis Library (Rust port of librosa)"
license = "Apache-2.0"
authors = ["Wang Xin <xinwang614@gmail.com>"]
repository = "https://github.com/greatv/giggle"
homepage = "https://github.com/greatv/giggle"
keywords = ["audio", "music", "mfcc", "spectrogram", "dsp"]
categories = ["multimedia::audio", "mathematics", "algorithms"]

[features]
default = ["parallel"]
display = []
parallel = ["rayon"]

[dependencies]
ndarray = "0.15"
rustfft = "6.2"
realfft = "3.3"
hound = "3.5"
symphonia = { version = "0.5", default-features = false, features = ["aac", "alac", "flac", "mp3", "ogg", "wav"] }
num-complex = "0.4"
approx = "0.5"
rubato = "0.15"
rand = "0.8"
thiserror = "2"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
ndarray-npy = "0.8"
proptest = "1.5"
log = "0.4"
env_logger = "0.11"
